I am a Pokemon Master

--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,17 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<h4>Pokemons:</h4>
+    <ul>
+      <% @trainer.pokemons.each do |pokemon| %>
+        <li><%= pokemon.name %>: Level: <%= pokemon.level %> Health: <%= pokemon.health %> </li> 
+        <%= button_to "Damage!", damage_path(id: pokemon), :class => "button medium", :method => :patch %>
+      <% end %>
+    </ul>
+<h4>Create New Pokemon:</h4>
+<%if @trainer.id == current_trainer.id %> 
+<%= button_to "Create!", create_path, :class => "button medium", :method => :get %>
+<% end %>
+<%if @trainer.id != current_trainer.id %>
+<p>You can't create Pokemon for <%= @trainer.name %>!</p>
+<% end %>
